# guitar-practice-toolkit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/skills/guitar-toolkit/: SKILL.md
src/guitar_toolkit/: __init__.py  audio.py  bpm.py  demucs_mix.py
src/guitar_toolkit/songs/: download.py  workflow.py
src/guitar_toolkit/tabs/: download.py  gen_gp.py  gp_parser.py  sync.py
src/guitar_toolkit/tabs/assets/: blank.gp  drum_kit.xml
